--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,10 +5,13 @@ defaults:
   run:
     shell: bash
 
+
 jobs:
   release-docker:
     name: "BigDipper Docker image"
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: bigdipper
     
     steps:
       - uses: actions/checkout@v3
@@ -37,3 +40,61 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Set version number
+        id: set-version
+        run: |
+          VERSION=$( git describe --tags ${{ github.sha }})
+          echo ::set-output name=VERSION::"$VERSION"
+
+      - name: Set network name
+        id: set-network
+        run: |
+          NETWORK_NAME=${GITHUB_REF##*/}
+          echo ::set-output name=NETWORK_NAME::"$NETWORK_NAME"
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        id: buildx
+        with:
+          install: true
+          version: latest
+
+      - name: Install DigitalOcean CLI
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Login to DigitalOcean Container Registry
+        run: doctl registry login --expiry-seconds 600
+
+      - name: Configure Docker image metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: registry.digitalocean.com/${{ env.IMAGE_NAME }}
+          flavor: |
+            latest=auto
+            prefix=${{ steps.set-network.outputs.NETWORK_NAME }}-,onlatest=true
+          tags: |
+            type=semver,pattern={{version}},value=${{ needs.release-binary.outputs.VERSION }}
+          labels: |
+            org.opencontainers.image.title="BigDipper for cheqd network"
+            org.opencontainers.image.description="BigDipper block explorer for cheqd network"
+            org.opencontainers.image.source="https://github.com/cheqd/bdjuno"
+            org.opencontainers.image.vendor="Cheqd Foundation Limited"
+            org.opencontainers.image.created={{date 'dddd, MMMM Do YYYY, h:mm:ss a'}}
+            org.opencontainers.image.documentation="https://docs.cheqd.io/node"
+
+      - name: Build BDJuno image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64
+          load: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Push BDJuno image
+        run: docker image push --all-tags registry.digitalocean.com/${{ env.IMAGE_NAME }}
