--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -19,13 +19,13 @@ jobs:
   call-release:
     name: "Release"
     needs: call-build
-    # if: ${{ github.ref_protected == true }}
+    if: ${{ github.ref_protected == true }}
     uses: ./.github/workflows/release.yml
     secrets: inherit
 
-  # call-codeql:
-  #   name: "CodeQL"
-  #   needs: call-build
-  #   if: ${{ github.ref_protected == true }}
-  #   uses: ./.github/workflows/codeql.yml
-  #   secrets: inherit
+  call-codeql:
+    name: "CodeQL"
+    needs: call-build
+    if: ${{ github.ref_protected == true }}
+    uses: ./.github/workflows/codeql.yml
+    secrets: inherit
