--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
             org.opencontainers.image.created={{date 'dddd, MMMM Do YYYY, h:mm:ss a'}}
             org.opencontainers.image.documentation="https://product.cheqd.io/"
 
-      - name: Build BDJuno image
+      - name: Build BigDipper image
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -64,6 +64,8 @@ jobs:
           load: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            NEXT_PUBLIC_GRAPHQL_URL={{ secrets.NEXT_PUBLIC_GRAPHQL_URL }}
 
-      - name: Push BDJuno image
+      - name: Push BigDipper image
         run: docker image push --all-tags registry.digitalocean.com/${{ env.IMAGE_NAME }}
