--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -16,6 +16,13 @@ jobs:
     needs: call-lint
     uses: ./.github/workflows/build.yml
 
+  call-release:
+    name: "Release"
+    needs: call-build
+    if: ${{ github.ref_protected == true }}
+    uses: ./.github/workflows/release.yml
+    secrets: inherit
+    
   call-codeql:
     name: "CodeQL"
     needs: call-build
