--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_GRAPHQL_URL=https://testnet-gql.cheqd.io/v1/graphql
-      - NEXT_PUBLIC_GRAPHQL_WS_URL=wss://testnet-gql.cheqd.io/v1/graphql
+      - NEXT_PUBLIC_GRAPHQL_URL=https://explorer-gql.cheqd.io/v1/graphql
+      - NEXT_PUBLIC_GRAPHQL_WS_URL=wss://explorer-gql.cheqd.io/v1/graphql
       - NEXT_PUBLIC_URL=http://localhost:3000
-      - NEXT_PUBLIC_RPC_WEBSOCKET=wss://api.cheqd.network/websocket
-      - NEXT_PUBLIC_CHAIN_TYPE=testnet
+      - NEXT_PUBLIC_RPC_WEBSOCKET=wss://api.cheqd.net/websocket
+      - NEXT_PUBLIC_CHAIN_TYPE=mainnet
     command: [ "npm start" ]
