--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,20 +18,20 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
+          cache: 'yarn'
           cache-dependency-path: '**/package-lock.json'
       
       - name: "Install dependencies"
-        run: npm ci
+        run: yarn install
 
       - name: "Execute JS/TS/TSX/JSX linters"
         run: |
-          npm run type-check
-          npm run lint
+          yarn run type-check
+          yarn run lint
 
       - name: "Execute build"
         run: |
-          npm run build
+          yarn build
       
       - name: "Execute tests"
-        run: npm run test
+        run: yarn run test
