Switch yarn install to --frozen-lockfile
Since yarn install can touch and change yarn.lock, it's recommended in CI to use --frozen-lockfile. See https://classic.yarnpkg.com/en/docs/cli/install#toc-yarn-install-frozen-lockfile

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build
         run: |
-          yarn install
+          yarn install --frozen-lockfile
           yarn build
 
       - name: Perform CodeQL Analysis
