--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,9 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
-          cache-dependency-path: '**/package-lock.json'
       
       - name: "Install dependencies"
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: "Execute JS/TS/TSX/JSX linters"
         run: |
