--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: "Release"
+name: "Deploy"
 on:
   workflow_call:
 defaults:
@@ -7,8 +7,9 @@ defaults:
 
 
 jobs:
-  release-docker-testnet:
-    name: "BigDipper Docker image - Testnet"
+
+  deploy-testnet:
+    name: "BigDipper - Testnet"
     runs-on: ubuntu-latest
     if: ${{ ( github.ref_name == 'chains/cheqd/testnet' ) }}
     environment: testnet
