--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -17,9 +17,9 @@ jobs:
     uses: ./.github/workflows/build.yml
     secrets: inherit
 
-  call-deploy:
-    name: "Deploy"
+  call-release:
+    name: "Release"
     needs: call-build
     if: ${{ github.ref_protected == true }}
-    uses: ./.github/workflows/deploy.yml
+    uses: ./.github/workflows/release.yml
     secrets: inherit
