--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -20,6 +20,6 @@ jobs:
   call-release:
     name: "Release"
     needs: call-build
-    if: ${{ github.ref_protected == true }}
+    # if: ${{ github.ref_protected == true }}
     uses: ./.github/workflows/release.yml
     secrets: inherit
