--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
       - NODE_ENV=production
       - NEXT_PUBLIC_GRAPHQL_URL=https://testnet-gql.cheqd.io/v1/graphql
       - NEXT_PUBLIC_GRAPHQL_WS_URL=wss://testnet-gql.cheqd.io/v1/graphql
-      - NEXT_PUBLIC_RPC_WEBSOCKET=wss://rpc.cheqd.network:443/websocket
+      - NEXT_PUBLIC_RPC_WEBSOCKET=wss://rpc.cheqd.networkdo/websocket
       - NEXT_PUBLIC_CHAIN_TYPE=testnet
-    command: [ "yarn start" ]
+    command: [ "yarn", "start" ]
