Change frozen lockfile to immutable

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,7 @@ jobs:
           cache: 'yarn'
       
       - name: "Install dependencies"
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: "Execute JS/TS/TSX/JSX linters"
         run: yarn lint
