--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
           cache: 'yarn'
       
       - name: "Install dependencies"
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: "Execute build"
         run: yarn build
