feat: Sync testnet changes to mainnet, with custom message parsing on mainnet (#67)
* DEV-1604: Github actions for Big Dipper

* Create .releaserc.json

* Standardise

* Revert "Standardise"

This reverts commit e52e5a91f9198b8da1191bcb847ba1adb5724c00.

* Standardise issue template

* Delete ensure_set_euox_pipefail.sh

* Move BDJuno ESLint config

* Create dependabot.yml

* Remove Docker workflows from upstream

* Update pull-request.yml

* Update dispatch.yml

* Update package.json

* Update codeql.yml

* Remove shell pipefail check

* Add bash and Docker linting

* Update build.yml

* Delete codecov and test

* Update .dockerignore

* Update package-lock.json

* Change CodeQL execution on Workflow Call

* Update releaserc configuration to correct version

* Update GraphQL codegen

* Disable NPM publish

* Added root dir config to jest

* Changed build to NPM local

* Update package.json

* Bump all packages

* Revert "Bump all packages"

This reverts commit 6e702f57a42905e825f364be63263efc5f62577c.

* Update package.json

* Bump package.json

* Create .eslintrc.json

* Revert "Bump package.json"

This reverts commit 97c8f3d905c47a9fcd66b472d564218d284160ac.

* config for ESLint

* Update .gitignore

* Update package-lock.json

* Run dedupe

* Install types/react

* DEV-1493: Changes related to Big Dipper redeployment to DO Apps

* Disable release workflow

* Update dispatch.yml

* Remove bash and Swagger linters

* Remove Markdown linting

* Set commitlint rules

* Update semantic release dependencies

* Added PR check conventional commit

* Moved ESLint file

* Updated ESLint command

* Update lint.yml

* Update path to js and ts linter config file

* Fix eslint errors

* Put ESLint in two places

* Cosmetic changes to step names in build

* Moved JS linting to own step

* Delete release.yml

* Update package.json

* Update package.json

* Updat

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
 # Skip unncecessary folders
+.git
 .github
 .next
 dist
@@ -9,5 +10,9 @@ tests
 # Skip unnecessary files
 **/*.md
 Dockerfile**
-npm-debug.log
+docker-compose.yml
+.DS_Store
 .env
+.env.sample
+LICENSE
+npm-debug.log
