--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -21,8 +21,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
       - name: Initialise CodeQL
         uses: github/codeql-action/init@v2
@@ -30,10 +28,11 @@ jobs:
           languages: 'javascript'
           queries: security-and-quality
 
+      - name: Install dependencies
+        run: yarn install --immutable
+
       - name: Build
-        run: |
-          npm ci
-          npm run build
+        run: yarn build
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
