--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,15 @@ services:
     user: node
     working_dir: /home/node/app
     ports:
-      - target: 8080
-        published: 3000
+      - target: 3000
+        published: 8080
         protocol: tcp
         mode: host
     restart: unless-stopped
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_GRAPHQL_URL=https://explorer-gql.cheqd.io/v1/graphql
-      - NEXT_PUBLIC_GRAPHQL_WS_URL=wss://explorer-gql.cheqd.io/v1/graphql
-      - NEXT_PUBLIC_URL=http://localhost:3000
-      - NEXT_PUBLIC_RPC_WEBSOCKET=wss://rpc.cheqd.net:443/websocket
+      - NEXT_PUBLIC_GRAPHQL_WS=wss://explorer-gql.cheqd.io/v1/graphql
+      - NEXT_PUBLIC_RPC_WEBSOCKET=wss://rpc.cheqd.net/websocket
       - NEXT_PUBLIC_CHAIN_TYPE=mainnet
-    command: [ "npm start" ]
+    command: [ "yarn", "start" ]
