--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "big-dipper-2.0-cosmos",
   "version": "1.0.0",
-  "description": "BigDipper Explorer for cheqd network",
+  "description": "Big Dipper Explorer for cheqd network",
   "license": "Apache-2.0",
   "author": "Cheqd Foundation Limited (https://github.com/cheqd)",
   "repository": "https://github.com/cheqd/big-dipper-2.0-cosmos.git",
@@ -10,8 +10,7 @@
   },
   "homepage": "https://github.com/cheqd/big-dipper-2.0-cosmos#readme",
   "scripts": {
-    "dev": "nodemon",
-    "build": "npm run build:next && npm run build:server",
+    "build": "yarn run build:next && yarn run build:server",
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
     "start": "NODE_ENV=production node dist/index.js",
@@ -26,7 +25,6 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.10.0",
-    "@socialgouv/matomo-next": "^1.2.2",
     "axios": "^0.27.2",
     "bech32": "^2.0.0",
     "big.js": "^6.1.1",
@@ -57,7 +55,7 @@
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.8",
-    "recharts": "^2.0.8",
+    "recharts": "2.1.12",
     "recoil": "^0.7.5",
     "subscriptions-transport-ws": "^0.10.0"
   },
@@ -80,22 +78,25 @@
     "@typescript-eslint/parser": "^4.1.0",
     "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^29.0.3",
-    "eslint": "^7.8.1",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "jest": "^27.3.1",
+    "jest": "^27.3.2",
     "jest-localstorage-mock": "^2.4.18",
     "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "^0.6.1",
-    "nodemon": "^2.0.4",
     "react-test-renderer": "^17.0.1",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.3.5"
-  }
+  },
+  "resolutions": {
+    "@types/react": "~17.0.47"
+  },
+  "packageManager": "yarn@3.2.4"
 }
