--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
+      - NPM_CONFIG_LOGLEVEL=warn
       - NEXT_PUBLIC_GRAPHQL_URL=https://explorer-gql.cheqd.io/v1/graphql
       - NEXT_PUBLIC_GRAPHQL_WS=wss://explorer-gql.cheqd.io/v1/graphql
       - NEXT_PUBLIC_RPC_WEBSOCKET=wss://rpc.cheqd.net/websocket
