--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,85 @@
-name: Release
-
+name: "Release"
 on:
-  push:
-    branches:
-      - main
+  workflow_call:
+defaults:
+  run:
+    shell: bash
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  release:
-    name: Release
+
+  release-docker:
+    name: "BigDipper Docker image"
     runs-on: ubuntu-latest
+    env:
+      IMAGE_NAME: ${{ github.repository }}
+
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-      - run: corepack enable
-
-      - name: Setup Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
         with:
-          node-version: 18
-          cache: 'yarn'
+          persist-credentials: false
 
-      - run: yarn --immutable --immutable-cache
+      - name: Set network name
+        id: set-network
+        run: echo NETWORK_NAME="${GITHUB_REF##*/}" >> "$GITHUB_OUTPUT"
 
-      - name: Create Release Pull Request
-        uses: changesets/action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        id: buildx
         with:
-          version: yarn changeset version
-          publish: echo non-npm packages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          install: true
+          version: latest
+
+      - name: Install DigitalOcean CLI
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Login to DigitalOcean Container Registry
+        run: doctl registry login --expiry-seconds 600
+
+      - name: Configure Docker image metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: registry.digitalocean.com/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ steps.set-network.outputs.NETWORK_NAME }}-latest
+            type=sha,format=long
+          labels: |
+            org.opencontainers.image.description="BigDipper block explorer for cheqd network"
+            org.opencontainers.image.source="https://github.com/cheqd/big-dipper-2.0-cosmos"
+            org.opencontainers.image.vendor="Cheqd Foundation Limited"
+            org.opencontainers.image.created={{date 'dddd, MMMM Do YYYY, h:mm:ss a'}}
+            org.opencontainers.image.documentation="https://product.cheqd.io/"
+
+      - name: Build BigDipper image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64
+          load: true
+          target: runner
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=min
+
+      - name: Push BigDipper image
+        run: docker image push --all-tags registry.digitalocean.com/${{ env.IMAGE_NAME }}
+
+  cache-purge:
+    name: "Purge branch Actions cache"
+    needs: release-docker
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    
+    steps:
+
+      - name: "Delete Branch Cache Action"
+        uses: snnaplab/delete-branch-cache-action@v1.0.0
+        with:
+          # Specify explicitly because the ref at the time of merging will be a branch name such as 'main', 'develop'
+          ref: refs/pull/${{ github.event.number }}/merge
+          github-token: ${{ secrets.GITHUB_TOKEN }}
