--- a/turbo.json
+++ b/turbo.json
@@ -54,13 +54,7 @@
     "NODE_ENV",
     "npm_package_version",
     "PORT",
-    "PROJECT_NAME",
-    "SENTRY_AUTH_TOKEN",
-    "SENTRY_ENVIRONMENT",
-    "SENTRY_PROJECT",
-    "SENTRY_ORG",
-    "SENTRY_URL",
-    "VERCEL"
+    "PROJECT_NAME"
   ],
   "globalDependencies": [
     ".env",
