--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,11 @@ defaults:
 env:
   BASE_PATH: "/"
   NODE_ENV: "production"
-  NEXT_PUBLIC_CHAIN_TYP: testnet
+  NEXT_PUBLIC_CHAIN_TYPE: testnet
   NEXT_PUBLIC_GRAPHQL_URL: "https://testnet-gql.cheqd.io/v1/graphql"
   NEXT_PUBLIC_GRAPHQL_WS: "wss://testnet-gql.cheqd.io/v1/graphql"
   NEXT_PUBLIC_RPC_WEBSOCKET: "wss://rpc.cheqd.network/websocket"
+  PROJECT_NAME: web-cheqd
 
 jobs:
 
