--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,6 +3,7 @@ on:
   pull_request_target:
     branches:
       - chains/cheqd/**
+      - legacy/cheqd/**
     types:
       - opened
       - reopened
