--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,6 @@ jobs:
         run: yarn build
       
       - name: "Execute tests"
+        # Remove the line below once we know everything works
         continue-on-error: true
         run: yarn test
