--- a/turbo.json
+++ b/turbo.json
@@ -46,6 +46,7 @@
     "BASE_PATH",
     "BUILD_STANDALONE",
     "NEXT_PUBLIC_CHAIN_TYPE",
+    "NEXT_PUBLIC_SENTRY_DSN",
     "NEXT_PUBLIC_RELEASE",
     "NODE_ENV",
     "npm_package_version",
