cosmos-v0.47.x related changes

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,6 @@
 checksumBehavior: update
 
-nodeLinker: pnp
+nodeLinker: node-modules
 
 packageExtensions:
   "@babel/plugin-syntax-import-assertions@*":
@@ -67,19 +67,5 @@ plugins:
     spec: "@yarnpkg/plugin-typescript"
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
-
-supportedArchitectures:
-  cpu:
-    - arm
-    - arm64
-    - x64
-    - ia32
-  libc:
-    - glibc
-    - musl
-  os:
-    - darwin
-    - linux
-    - win32
 
 yarnPath: .yarn/releases/yarn-3.5.0.cjs
