--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
         "NEXT_PUBLIC_GRAPHQL_WS",
         "NEXT_PUBLIC_MATOMO_SITE_ID",
         "NEXT_PUBLIC_MATOMO_URL",
-        "NEXT_PUBLIC_RPC_WEBSOCKET"
+        "NEXT_PUBLIC_RPC_WEBSOCKET",
+        "SITE_URL"
       ]
     },
     "clean": {
