ci: Add missing environment variables

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: ${{ github.repository }}
+      BASE_PATH: "/"
+      NODE_ENV: "production"
+      NEXT_PUBLIC_CHAIN_TYPE: testnet
+      NEXT_PUBLIC_GRAPHQL_URL: "https://testnet-gql.cheqd.io/v1/graphql"
+      NEXT_PUBLIC_GRAPHQL_WS: "wss://testnet-gql.cheqd.io/v1/graphql"
+      NEXT_PUBLIC_RPC_WEBSOCKET: "wss://rpc.cheqd.network/websocket"
+      PROJECT_NAME: web-cheqd
 
     steps:
       - uses: actions/checkout@v3
