--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,9 +69,9 @@ jobs:
             BASE_PATH=/
             NODE_ENV=production
             NEXT_PUBLIC_CHAIN_TYPE=testnet
-            NEXT_PUBLIC_GRAPHQL_URL="https://testnet-gql.cheqd.io/v1/graphql"
-            NEXT_PUBLIC_GRAPHQL_WS="wss://testnet-gql.cheqd.io/v1/graphql"
-            NEXT_PUBLIC_RPC_WEBSOCKET="wss://rpc.cheqd.network/websocket"
+            NEXT_PUBLIC_GRAPHQL_URL=https://testnet-gql.cheqd.io/v1/graphql
+            NEXT_PUBLIC_GRAPHQL_WS=wss://testnet-gql.cheqd.io/v1/graphql
+            NEXT_PUBLIC_RPC_WEBSOCKET=wss://rpc.cheqd.network/websocket
             PROJECT_NAME=web-cheqd
 
       - name: Push BigDipper image
